k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mecanica-api
  namespace: mecanica
  labels:
    app: mecanica-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mecanica-api
  template:
    metadata:
      labels:
        app: mecanica-api
    spec:
      containers:
        - name: api
          image: ghcr.io/castor-garage/mecanica-pos-soat:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 15
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
