k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mecanica-api
  namespace: mecanica
spec:
  selector:
    app: mecanica-api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
